--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 tui = "0.12.0"              # A library to build rich terminal user interfaces or dashboards 
 termion = "1.5.6"                          # A bindless library for manipulating terminals.
 rand = "0.8.3"              # Random number generators and other randomness functionality. 
+clipboard = "0.5.0"             # rust-clipboard is a cross-platform library for getting and setting the contents of the OS-level…
